--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -13,7 +13,14 @@
   <body>
     <!-- {{form}} -->]
     <div class="container">
-        
+        <div class="py-5 text-center bg-secondary text-white">
+            <h1 class="mb-3">Upload</h1>
+            <form action="" method="post">
+                {% csrf_token %}
+                {{form}}
+                <input type="submit" class="btn btn-danger" value="Upload">
+            </form>
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
