--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="py-5 text-center bg-secondary text-white">
             <h1 class="mb-3">Upload</h1>
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form}}
                 <input type="submit" class="btn btn-danger" value="Upload">
