--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -21,6 +21,15 @@
                 <input type="submit" class="btn btn-danger" value="Upload">
             </form>
         </div>
+        <div class="row">
+            {% for x in img %}
+            <div class="col-sm-4">
+                <div class="card m-2">
+                    <img src="{{x.photo.url}}" alt="" class="card-img-top" height="200px">
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
